--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Neha Porwal</h1>
+            <div><a href="mailto:your.email@example.com">neha.porwal@studentambassadors.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/neha2109>">github</a></li>
+                    <li><a href="https://linkedin.com/in/<handle>">linkedin</a></li>
+                    <li><a href="https://twitter.com/<handle>">twitter</a></li>
                 </ul>    
             </section>
             
@@ -31,11 +31,11 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        IIIT Dharwad
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
+                        <li>GPA: 8.90</li>
                         <li>Years</li>
                     </ul>
                 </div>
@@ -51,6 +51,8 @@
                     <li>HTML</li>
                     <li>JavaScript</li>
                     <li>Git</li>
+                    <li>Git</li>
+                     <li>C++</li>
                     <li>Visual Studio Code</li>
                 </ul>
             </section>
